PN-4422: modifiche a mock per esporre api consolidatore